# mk-screens

./: .env  .gitignore  .pre-commit-config.yaml  .spelling-wordlist.txt  Cargo.toml  README.md  TODO.md
.vim/: coc-settings.json
src/: cli.rs  error.rs  ffmpeg_ext.rs  files.rs  lib.rs  main.rs  opts.rs  process.rs  screencaps.rs  seek.rs  settings.rs  util.rs  video.rs
src/ffmpeg_ext/: coded_dim.rs  dimensions.rs  filters.rs  mod.rs  seek.rs
