[package]
name = "mk-screens"
version = "0.1.0"
authors = ["Brendan McGloin <stmonkeydoom@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
clap = { version = "4.4.11", features = ["derive", "unicode", "wrap_help", "cargo"] }
config = { version = "0.13.4", features = ["yaml"], default-features = false }
derivative = "2.2.0"
directories = "5.0.1"
dotenv = "0.15.0"
ffmpeg-next = "6.1.0"
ffmpeg-sys-next = "6.1.0"
filetime = "0.2.23"
globset = "0.4.14"
image = "0.24.5"
indicatif = { version = "0.17.7", features = ["improved_unicode", "rayon"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
libc = "0.2.151"
#log = { version = "0.4.14", features = ["release_max_level_debug", "max_level_trace"] }
log = "0.4.20"
mime = "0.3.17"
mime_guess = "2.0.4"
pretty_env_logger = "0.5.0"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
#serde_yaml = "0.9.29"
serde_yaml = "0.8.23"
structopt = "0.3.26"
thiserror = "1.0.52"
unicode-width = "0.1.11"
webp = "0.2.6"
color-eyre = {version = "0.6.2", optional = true }
eyre = "0.6.11"
color-backtrace = {version = "0.6.1", optional = true, features = ["resolve-modules"] }

[features]
default = ["pretty-errors"]
pretty-errors = ["color-backtrace", "color-eyre"]
