[package]
name = "mk-screens"
version = "0.1.0"
authors = ["Brendan McGloin <stmonkeydoom@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
clap = { version = "4.5.4", features = ["derive", "unicode", "wrap_help", "cargo"] }
config = { version = "0.14.0", features = ["yaml"], default-features = false }
derivative = "2.2.0"
directories = "5.0.1"
dotenv = "0.15.0"
ffmpeg-next = "7.0.0"
ffmpeg-sys-next = "7.0.0"
filetime = "0.2.23"
globset = "0.4.14"
image = "0.25.1"

indicatif = { version = "0.17.8", features = ["improved_unicode", "rayon"] }
itertools = "0.12.1"
lazy_static = "1.4.0"
libc = "0.2.153"
#log = { version = "0.4.14", features = ["release_max_level_debug", "max_level_trace"] }
log = "0.4.21"
mime = "0.3.17"
mime_guess = "2.0.4"
pretty_env_logger = "0.5.0"
rayon = "1.10.0"
serde = { version = "1.0.199", features = ["derive"] }
#serde_yaml = "0.9.29"
serde_yaml = "0.8.26"
structopt = "0.3.26"
thiserror = "1.0.59"
unicode-width = "0.1.12"
webp = "0.3.0"
color-eyre = {version = "0.6.3", optional = true }
eyre = "0.6.12"
color-backtrace = {version = "0.6.1", optional = true, features = ["resolve-modules"] }

[features]
default = ["pretty-errors"]
pretty-errors = ["color-backtrace", "color-eyre"]
