[package]
name = "mk-screens"
version = "0.1.0"
authors = ["Brendan McGloin <stmonkeydoom@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.9.1"
clap = { version = "4.5.39", features = ["derive", "unicode", "wrap_help", "cargo"] }
color-backtrace = {version = "0.6.1", optional = true, features = ["resolve-modules"] }
color-eyre = {version = "0.6.5", optional = true }
config = { version = "0.14.1", features = ["yaml"], default-features = false }
derivative = "2.2.0"
directories = "5.0.1"
dotenv = "0.15.0"
eyre = "0.6.12"
ffmpeg-next = "7.1.0"
ffmpeg-sys-next = "7.1.3"
filetime = "0.2.25"
globset = "0.4.16"
here = { version = "1", features = ["log"] }
image = "0.25.6"
indicatif = { version = "0.17.11", features = ["improved_unicode", "rayon"] }
indicatif-log-bridge = "0.2.3"
itertools = "0.12.1"
lazy_static = "1.5.0"
libc = "0.2.172"
#log = { version = "0.4.14", features = ["release_max_level_debug", "max_level_trace"] }
log = "0.4.27"
mime = "0.3.17"
mime_guess = "2.0.5"
paste = "1.0.15"
pretty_env_logger = "0.5.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
#serde_yaml = "0.9.29"
serde_yaml = "0.8.26"
snafu = { version = "0.8.6", features = ["backtrace", "guide"] }
tracing = { version = "0.1.41", features = ["log", "async-await"] }
unicode-width = "0.1.14"
webp = "0.3.0"

[features]
default = ["pretty-errors"]
pretty-errors = ["color-backtrace", "color-eyre"]
